<resources>
    <string name="app_name">Todays</string>
    <string name="facebook_app_id">191924564766851</string>
    <string name="fb_login_protocol_scheme">fb191924564766851</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="host">13.209.129.200</string>
    <string name="port">3000</string>
    <string name="action_settings">Options</string>


    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>

    <string name="start_button">방송 시작</string>
    <string name="start_record">Start record</string>
    <string name="switch_camera_button">카메라 전환</string>
    <string name="hint_rtmp">rtmp://13.125.115.186/myapp/1</string>
    <string name="stop_button">방송 종료</string>
    <string name="stop_record">Stop record</string>


    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
</resources>
