<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <FrameLayout
        android:id="@+id/surface_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black">

        <net.majorkernelpanic.streaming.gl.SurfaceView
            android:id="@+id/surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/bitrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/surface_layout"
        android:padding="5dp"
        android:text="@string/default_bitrate"
        android:textColor="@android:color/white" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/surface_layout"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:src="@drawable/ic_switch_video"
                android:text="@string/start" />

            <ImageButton
                android:id="@+id/flash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/flash"
                android:src="@drawable/ic_flash_on_holo_light" />

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/camera"
                android:src="@drawable/ic_switch_photo_facing_holo_light" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/video"
                android:src="@drawable/ic_settings_holo_light" />
        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/video_settings" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/progress_large_white"
            android:visibility="gone" />

    </FrameLayout>

    <ListView
        android:id="@+id/streamingList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="158dp" />

    <EditText
        android:id="@+id/streamingChat"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/streamingSend"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        tools:background="@android:drawable/editbox_dropdown_light_frame" />

    <Button
        android:id="@+id/streamingSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_light_frame"
        android:text="보내기" />

</RelativeLayout>